k8s/proxyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burger-proxy
  namespace: burger-shop 
spec:
  selector:
    matchLabels:
      app: burger-proxy
  template:
    metadata:
      annotations:
        oneagent.dynatrace.com/inject: "false"
      labels:
        app: burger-proxy
    spec:
      containers:
        - name: burger-proxy
          image: mreider/proxyservice:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.5"
