k8s/frontendservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendservice
  namespace: burger-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontendservice
  template:
    metadata:
      labels:
        app: frontendservice
    spec:
      containers:
        - name: frontendservice
          image: mreider/frontendservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"  
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
  namespace: burger-shop
spec:
  type: NodePort
  selector:
    app: frontendservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
