k8s/fulfillmentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fulfillmentservice
  namespace: burger-shop
  labels:
    servicename: fulfillmentservice
    app: burger
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fulfillmentservice
  template:
    metadata:
      labels:
        app: fulfillmentservice
      annotations:
        oneagent.dynatrace.com/inject: "false"
    spec:
      containers:
        - name: fulfillmentservice
          image: mreider/fulfillmentservice:40
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"  
          volumeMounts:
            - name: otel-agent
              mountPath: /otel-agent
      volumes:
        - name: otel-agent
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: fulfillmentservice
  namespace: burger-shop
spec:
  selector:
    app: fulfillmentservice
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
