k8s/rabbit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: burger-shop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: burger-shop  
  annotations:
    app.kubernetes.io/component: "rabbitmq"
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
        - containerPort: 15692  # Prometheus metrics port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: burger-shop
spec:
  ports:
  - port: 5672
    targetPort: 5672
    name: amqp
  - port: 15672
    targetPort: 15672
    name: management
  - port: 15692
    targetPort: 15692
    name: prometheus-metrics  # Prometheus scraping port
  selector:
    app: rabbitmq
